--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,20 @@ server:
   port: 8080
   tomcat:
     uri-encoding: UTF-8
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create-drop  # ???? ???? ?????? ?? ? ??
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
