--- a/.github/workflows/ciTest.yml
+++ b/.github/workflows/ciTest.yml
@@ -36,3 +36,9 @@ jobs:
         with:
           name: test-results
           path: build/test-results
+
+      - name: Upload JAR file
+        uses: actions/upload-artifact@v4
+        with:
+          name: application-jar
+          path: build/libs/*.jar
