--- a/.github/workflows/cdTest.yml
+++ b/.github/workflows/cdTest.yml
@@ -54,16 +54,16 @@ jobs:
 
       - name: Terraform Init
         run: docker run --rm \
-          -v ${{ github.workspace }}:/workspace \
+          -v "${{ github.workspace }}:/workspace" \
           -w /workspace \
-          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+          -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
           hashicorp/terraform:1.9.0 init
 
       - name: Terraform Plan
         run: docker run --rm \
-          -v ${{ github.workspace }}:/workspace \
+          -v "${{ github.workspace }}:/workspace" \
           -w /workspace \
-          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+          -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
           hashicorp/terraform:1.9.0 plan
