--- a/.github/workflows/cdTest.yml
+++ b/.github/workflows/cdTest.yml
@@ -53,7 +53,8 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: Terraform Init
-        run: docker run --rm \
+        run: |
+          docker run --rm \
           -v ${{ github.workspace }}:/workspace \
           -w /workspace \
           -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
@@ -61,7 +62,8 @@ jobs:
           hashicorp/terraform:1.9.0 init
 
       - name: Terraform Plan
-        run: docker run --rm \
+        run: |
+          docker run --rm \
           -v ${{ github.workspace }}:/workspace \
           -w /workspace \
           -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
