--- a/.github/workflows/cdTest.yml
+++ b/.github/workflows/cdTest.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      action:
+        description: 'Select action: apply or destroy'
+        required: true
+        default: 'apply'
+        type: choice
+        options:
+          - apply
 
 jobs:
   deploy:
@@ -74,7 +82,7 @@ jobs:
   apply:
     runs-on: ubuntu-latest
     needs: deploy
-    if: github.event_name == 'workflow_dispatch'
+    if: github.event.inputs.action == 'apply'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -85,6 +93,15 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
+
+      - name: Terraform Init
+        run: |
+          docker run --rm \
+          -v ${{ github.workspace }}:/workspace \
+          -w /workspace \
+          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          hashicorp/terraform:1.9.0 init
 
       - name: Terraform Apply
         run: |
